--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.17.0",
     "eslint-config-next": "15.1.3",
+    "eslint-plugin-react": "^7.37.3",
+    "globals": "^15.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.19.0"
   }
 }
